force-app/main/default/objects/Revenue_Leak__c/Revenue_Leak__c.object-meta.xml
<CustomObject>
    <description>One detected revenue leak (e.g. an unsigned retainer past its SLA). Deterministic logic detects and values every leak; the row is the source of truth for the figures Claude is later allowed to narrate.</description>
    <label>Revenue Leak</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Leak Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Leaks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>