force-app/main/default/objects/Revenue_Leak__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The digest that announced this leak.</description>
    <label>Alert</label>
    <referenceTo>Leak_Alert__c</referenceTo>
    <relationshipLabel>Revenue Leaks</relationshipLabel>
    <relationshipName>Revenue_Leaks</relationshipName>
    <type>Lookup</type>
</CustomField>