force-app/main/default/objects/Revenue_Leak__c/fields/Alerted__c.field-meta.xml
<CustomField>
    <fullName>Alerted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true once this leak has been pushed in a digest, so the next run never re-pushes it.</description>
    <label>Alerted</label>
    <type>Checkbox</type>
</CustomField>