force-app/main/default/objects/Revenue_Leak__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <description>Business days the retainer has sat unsigned past the SLA threshold.</description>
    <label>Days Overdue</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>