force-app/main/default/objects/Revenue_Leak__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>Human-readable snapshot of the deterministic facts behind this leak (intake, client, days overdue).</description>
    <label>Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>