force-app/main/default/objects/Revenue_Leak__c/fields/Detected_At__c.field-meta.xml
<CustomField>
    <fullName>Detected_At__c</fullName>
    <description>When the detector first flagged this leak.</description>
    <label>Detected At</label>
    <type>DateTime</type>
</CustomField>