force-app/main/default/objects/Revenue_Leak__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <description>Risk-adjusted dollars at stake = Expected Case Value x Sign Probability. This is the only figure Claude is allowed to quote for this leak.</description>
    <label>Estimated Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>