force-app/main/default/objects/Revenue_Leak__c/fields/Expected_Case_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Case_Value__c</fullName>
    <description>Gross expected fee for this matter type, from Case_Value__mdt before applying sign probability.</description>
    <label>Expected Case Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>