force-app/main/default/objects/Revenue_Leak__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The intake this leak was detected on.</description>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Revenue Leaks</relationshipLabel>
    <relationshipName>Revenue_Leaks</relationshipName>
    <type>Lookup</type>
</CustomField>