force-app/main/default/objects/Revenue_Leak__c/fields/Leak_Type__c.field-meta.xml
<CustomField>
    <fullName>Leak_Type__c</fullName>
    <description>Which leak detector produced this row. Maps to a Leak_Rule__mdt DeveloperName.</description>
    <label>Leak Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unsigned Retainer</fullName>
                <default>true</default>
                <label>Unsigned Retainer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>