force-app/main/default/objects/Revenue_Leak__c/fields/Sign_Probability__c.field-meta.xml
<CustomField>
    <fullName>Sign_Probability__c</fullName>
    <description>Probability (0-100) this retainer still gets signed, from Case_Value__mdt. Stored as a percent for display.</description>
    <label>Sign Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>