force-app/main/default/objects/Revenue_Leak__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle of the leak. Open=detected, Alerted=pushed to owner, Recovered/Dismissed=resolved.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Alerted</fullName>
            </value>
            <value>
                <fullName>Recovered</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>